<resources>
    <string name="app_name">Список пидорасов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_note">Примечание</string>
    <string name="et_amount">Сумма</string>
    <string name="et_name">Имя</string>
    <string name="add_btn">Добавить</string>
    <string name="update_btn">Обновить</string>
</resources>